--- a/index.html
+++ b/index.html
@@ -115,71 +115,38 @@ body {
         <div class="doc">
             <div class="typing">
                 <div class="text-cover"></div>
-                <p>Wants pawn term, dare worsted ladle gull hoe lift wetter murder inner ladle cordage, honor itch offer lodge dock florist. Disk ladle gull orphan worry ladle cluck wetter putty ladle rat hut, an fur disk raisin pimple colder Ladle Rat Rotten
-                    Hut.
+                <p>My darling Janice,
                 </p>
 
-                <p>Wan moaning, Rat Rotten Hut's murder colder inset, "Ladle Rat Rotten Hut, heresy ladle basking winsome burden barter an shirker cockles. Tick disk ladle basking tutor cordage offer groin-murder hoe lifts honor udder site offer florist.
-                    Shaker lake! Dun stopper laundry wrote! An yonder nor sorghum-stenches, dun stopper torque wet strainers!"</p>
+                <p>Some people say that things seemed clearer when they were written down.</p>
 
-                <p>"Hoe-cake, murder," resplendent Ladle Rat Rotten Hut, an tickle ladle basking an stuttered oft. Honor wrote tutor cordage offer groin-murder, Ladle Rat Rotten Hut mitten anomalous woof. "Wail, wail, wail!" set disk wicket woof, "Evanescent
-                    Ladle Rat Rotten Hut! Wares are putty ladle gull goring wizard ladle basking?"</p>
+                <p>Well, here with a very boring letter in which I will try and put everything down.</p>
 
-                <p>"Armor goring tumor groin-murder's," reprisal ladle gull. "Grammar's seeking bet. Armor ticking arson burden barter an shirker cockles."</p>
+                <p>To begin with I love you with a depth and passion that I have felt for no one else in this life and if it astonishes you it astonishes me as well.</p>
 
-                <p>"O hoe! Heifer blessing woke," setter wicket woof, butter taught tomb shelf, "Oil tickle shirt court tutor cordage offer groin-murder. Oil ketchup wetter letter, an den - O bore!"</p>
+                <p>It's just that, first of all,  I would not get involved with another woman.</p>
 
-                <p>Soda wicket woof tucker shirt court, an whinney retched a cordage offer groin-murder, picked inner widow, an sore debtor pore oil worming worse lion inner bet. Inner flesh, disk abdominal woof lipped honor bet an at a rope. Den knee poled
-                    honor groin-murder's nut cup an gnat-gun, any curdled dope inner bet.</p>
+                <p>I would never have thought it possible that another human being could occupy my waking and sleeping thoughts to the exclusion of almost everything else.</p>
 
-                <p>Inner ladle wile, Ladle Rat Rotten Hut a raft attar cordage, an ranker dough belle. "Comb ink, sweat hard," setter wicket woof, disgracing is verse. Ladle Rat Rotten Hut entity bet rum an stud buyer groin-murder's bet.</p>
+                <p>I never hoped, aspired, dreamed that one could find everything one wanted in one person.</p>
 
-                <p>"O Grammar!" crater ladle gull, "Wood bag icer gut! A nervous sausage bag ice!"</p>
+                <p>Yet in you I have found everything I want.</p>
 
-                <p>"Battered lucky chew whiff, doling," whiskered disk ratchet woof, wetter wicket small.</p>
+                <p>I want nothing else in this life than to be with you, to listen and watch you, to argue with you, </p>
 
-                <p>"O Grammar, water bag noise! A nervous sore suture anomolous prognosis!"</p>
+                <p> to laugh with you, to globetrottingto with you, to take photos for you. show you things and share things with you,</p>
 
-                <p>"Battered small your whiff," insert a woof, ants mouse worse waddling.</p>
+                <p>to explore your magnificent mind, to explore your wonderful body, to help you, protect you, serve you,</p>
 
-                <p>"O Grammar, water bag mousy gut! A nervous sore suture bag mouse!"</p>
+                <p>and bash you on the head when I think you are wrong …</p>
 
-                <p>Daze worry on-forger-nut gulls lest warts. Oil offer sodden, thoroughing offer carvers an sprinkling otter bet, disk curl and bloat-thursday woof ceased pore Ladle Rat Rotten Hut an garbled erupt.</p>
+                <p>Everything I want to do with you.Only you.</p>
 
-                <p>Mural: Yonder nor sorghum stenches shut ladle gulls stopper torque wet strainers.</p>
-
-                <p>Wants pawn term, dare worsted ladle gull hoe lift wetter murder inner ladle cordage, honor itch offer lodge dock florist. Disk ladle gull orphan worry ladle cluck wetter putty ladle rat hut, an fur disk raisin pimple colder Ladle Rat Rotten
-                    Hut.
+                <p>Summer for thee, grant I may be.
                 </p>
 
-                <p>Wan moaning, Rat Rotten Hut's murder colder inset, "Ladle Rat Rotten Hut, heresy ladle basking winsome burden barter an shirker cockles. Tick disk ladle basking tutor cordage offer groin-murder hoe lifts honor udder site offer florist.
-                    Shaker lake! Dun stopper laundry wrote! An yonder nor sorghum-stenches, dun stopper torque wet strainers!"</p>
-
-                <p>"Hoe-cake, murder," resplendent Ladle Rat Rotten Hut, an tickle ladle basking an stuttered oft. Honor wrote tutor cordage offer groin-murder, Ladle Rat Rotten Hut mitten anomalous woof. "Wail, wail, wail!" set disk wicket woof, "Evanescent
-                    Ladle Rat Rotten Hut! Wares are putty ladle gull goring wizard ladle basking?"</p>
-
-                <p>"Armor goring tumor groin-murder's," reprisal ladle gull. "Grammar's seeking bet. Armor ticking arson burden barter an shirker cockles."</p>
-
-                <p>"O hoe! Heifer blessing woke," setter wicket woof, butter taught tomb shelf, "Oil tickle shirt court tutor cordage offer groin-murder. Oil ketchup wetter letter, an den - O bore!"</p>
-
-                <p>Soda wicket woof tucker shirt court, an whinney retched a cordage offer groin-murder, picked inner widow, an sore debtor pore oil worming worse lion inner bet. Inner flesh, disk abdominal woof lipped honor bet an at a rope. Den knee poled
-                    honor groin-murder's nut cup an gnat-gun, any curdled dope inner bet.</p>
-
-                <p>Inner ladle wile, Ladle Rat Rotten Hut a raft attar cordage, an ranker dough belle. "Comb ink, sweat hard," setter wicket woof, disgracing is verse. Ladle Rat Rotten Hut entity bet rum an stud buyer groin-murder's bet.</p>
-
-                <p>"O Grammar!" crater ladle gull, "Wood bag icer gut! A nervous sausage bag ice!"</p>
-
-                <p>"Battered lucky chew whiff, doling," whiskered disk ratchet woof, wetter wicket small.</p>
-
-                <p>"O Grammar, water bag noise! A nervous sore suture anomolous prognosis!"</p>
-
-                <p>"Battered small your whiff," insert a woof, ants mouse worse waddling.</p>
-
-                <p>"O Grammar, water bag mousy gut! A nervous sore suture bag mouse!"</p>
-
-                <p>Daze worry on-forger-nut gulls lest warts. Oil offer sodden, thoroughing offer carvers an sprinkling otter bet, disk curl and bloat-thursday woof ceased pore Ladle Rat Rotten Hut an garbled erupt.</p>
-
-                <p>Mural: Yonder nor sorghum stenches shut ladle gulls stopper torque wet strainers.</p>
+                <p>Nov.15th, 2019</p>
+                <p>Regulus</p>
             </div>
         </div>
     </div>
