--- a/index.html
+++ b/index.html
@@ -140,8 +140,9 @@ body {
 
                 <p>and bash you on the head when I think you are wrong …</p>
 
-                <p>Everything I want to do with you.Only you.</p>
-
+                <p>Everything I want to do with you.</p>
+                <p>No matter how far apart we are, my thought always find their way back to you.</p>
+              
                 <p>Summer for thee, grant I may be.
                 </p>
 
