--- a/index.html
+++ b/index.html
@@ -146,8 +146,8 @@ body {
                 <p>Summer for thee, grant I may be.
                 </p>
 
-                <p>                  Nov.15th, 2019</p>
-                <p>                     Regulus</p>
+                <p>.........................                  Nov.15th, 2019</p>
+                <p>..........................                     Regulus</p>
             </div>
         </div>
     </div>
