--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@ body {
     background: #fff;
     max-width: 600px;
     height: 100%;
-    overflow: hidden;
+    overflow: scroll;
     padding: 10%;
-    font-size: .2em;
+    font-size: .3em;
     margin: 0 auto;
     box-shadow: 0 1px 1px rgba(0, 0, 0, 0.15);
 }
@@ -120,7 +120,7 @@ body {
 
                 <p>Some people say that things seemed clearer when they were written down.</p>
 
-                <p>Well, here with a very boring letter in which I will try and put everything down.</p>
+                <p>Well, here with a very boring letter in which I will try and put something down.</p>
 
                 <p>To begin with I love you with a depth and passion that I have felt for no one else in this life and if it astonishes you it astonishes me as well.</p>
 
