--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ body {
     background: #fff;
     max-width: 600px;
     height: 100%;
-    overflow: scroll;
+    overflow: hidden;
     padding: 10%;
     font-size: .3em;
     margin: 0 auto;
@@ -146,8 +146,8 @@ body {
                 <p>Summer for thee, grant I may be.
                 </p>
 
-                <p>.........................                  Nov.15th, 2019</p>
-                <p>..........................                     Regulus</p>
+                <p>............................................             Nov.15th, 2019</p>
+                <p>.......................... .................                  Regulus</p>
             </div>
         </div>
     </div>
