--- a/index.html
+++ b/index.html
@@ -146,9 +146,9 @@ body {
                 <p>Summer for thee, grant I may be.
                 </p>
 
-                <p>............................................             Nov.15th, 2019</p>
-                <p>.......................... .................                  Regulus</p>
-            </div>
+                <p>.                                                      .              . Nov.15th, 2019</p>
+                <p>.                       ..                             ..                  . Regulus</p>
+            </div>.
         </div>
     </div>
 </section>
