--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-  <title> Just for You </title> 
+  <title> Just for You. My Pretty Girl</title> 
 <style>
 html {
     font-size: 100%;
