--- a/index.html
+++ b/index.html
@@ -117,16 +117,17 @@ body {
                 <div class="text-cover"></div>
                 <p>My darling Janice,
                 </p>
-
                 <p>Some people say that things seemed clearer when they were written down.</p>
 
                 <p>Well, here with a very boring letter in which I will try and put something down.</p>
 
-                <p>To begin with I love you with a depth and passion that I have felt for no one else in this life and if it astonishes you it astonishes me as well.</p>
+                <p>To begin with I love you with a depth and passion that I have felt for no one else in this life and if it astonishes you it astonishes me as well.
+              </p>
 
                 <p>It's just that, first of all,  I would not get involved with another woman.</p>
 
-                <p>I would never have thought it possible that another human being could occupy my waking and sleeping thoughts to the exclusion of almost everything else.</p>
+                <p>I would never have thought it possible that another human being could occupy my waking and sleeping thoughts to the exclusion of almost everything else.
+              </p>
 
                 <p>I never hoped, aspired, dreamed that one could find everything one wanted in one person.</p>
 
@@ -146,7 +147,7 @@ body {
                 <p>Summer for thee, grant I may be.
                 </p>
               <p>
-                </p>
+               Love always, </p>
 
                 <p>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp  Nov.15th, 2019</p>
                 <p>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp  Regulus</p>
