--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ body {
     font-size: .3em;
     margin: 0 auto;
     box-shadow: 0 1px 1px rgba(0, 0, 0, 0.15);
-    font-family: Arial;
+    font-family:微软雅黑;
 }
 .typing {
     width: 100%;
