--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@ body {
 
                 <p> to laugh with you, to globetrottingto with you, to take photos for you. show you things and share things with you,</p>
 
-                <p>to explore your magnificent mind, to explore your wonderful body, to help you, protect you, serve you,</p>
+                <p>to explore your magnificent mind, to help you, protect you, serve you,</p>
 
                 <p>and bash you on the head when I think you are wrong …</p>
 
